# py-opening-hours

./: .gitignore  README.rst  pyproject.toml
src/py_opening_hours/: __init__.py  common.py  data_structures.py  datetime_utils.py  evaluate.py  settings.py  syntax.py
tests/: conftest.py  test_data_structures.py  test_datetime_utils.py  test_evaluate.py  test_py_opening_hours.py  test_syntax.py
tests/fixtures/: opening_hours.txt
