[tool.poetry]
name = "py-opening-hours"
version = "0.1.0"
description = ""
authors = ["Matt Battifarano <matthew.battifarano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyparsing = "^3.0.9"
toolz = "^0.11.2"
holidays = "^0.13"
astral = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
prospector = "^1.7.7"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
